ubiquity (1.11.5) UNRELEASED; urgency=low

  [ Evan Dandrea ]
  * Full screen the window when in ONLY_UBIQUITY mode.  The extra screen
    real estate makes the timezone map, among other widgets, easier to
    use.

  [ Mario Limonciello ]
  * Adjust logic for detecting incomplete language support.  Just 
    because a package doesn't "exist" doesn't mean that language support
    isn't all there.  Some packages don't yet provide language-support-XY
    packages. (LP: #290398)

 -- Evan Dandrea <evand@ubuntu.com>  Tue, 20 Jan 2009 12:27:25 +0000

ubiquity (1.11.4) jaunty; urgency=low

  [ Mario Limonciello ]
  * Mythbuntu specific changes:
    - Don't reinvent the square with autologin.  It's provided 
      by user-setup, so use it there.
    - Eliminate mythbuntu_summary.py, and instead merge it into
      mythbuntu_install.py
    - Change definition overrides in mythbuntu_install.py so run() can
      be used from install.py without code duplication in mythbuntu_install.py.
      (LP: #178987), (LP: #201397), (LP: #293268)
    - Change function overrides in mythbuntu_ui.py.  There should be no
      full definition code duplication anymore.
  * GTK specific changes:
    - Move declaration of self.pages into __init__ instead so that it can
      more easily overridden outside of run().
  * Automatic update of included source packages: apt-setup
    1:0.37ubuntu9.

 -- Mario Limonciello <superm1@ubuntu.com>  Mon, 19 Jan 2009 08:28:50 -0600

ubiquity (1.11.3) jaunty; urgency=low

  [ Colin Watson ]
  * Correct Bazaar link in debian/copyright, really this time.
  * Update copyright years.
  * Fetch subarchitecture in remove_extras (LP: #316446).

  [ Evan Dandrea ]
  * Fix the edit partition dialog by properly preseeding
    partman/active_partition.
  * Add support for encrypting the home directory to the gtk frontend.
  * Automatic update of included source packages: apt-setup
    1:0.37ubuntu8, partconf 1.30ubuntu1.

  [ Mario Limonciello ]