@@ -1371,6 +1371,7 @@ class Wizard(BaseFrontend):
             self.set_keyboard(self.current_layout)
 
     def set_keyboard (self, layout):
+        self.default_keyboard_layout = layout
         BaseFrontend.set_keyboard(self, layout)
         model = self.keyboardlayoutview.get_model()
         if model is None:
@@ -1386,6 +1387,8 @@ class Wizard(BaseFrontend):
             iterator = model.iter_next(iterator)
 
     def get_keyboard (self):
+        if self.suggested_keymap.get_active():
+            return unicode(self.default_keyboard_layout)
         selection = self.keyboardlayoutview.get_selection()
         (model, iterator) = selection.get_selected()
         if iterator is None:
@@ -1408,6 +1411,15 @@ class Wizard(BaseFrontend):
                               self.on_keyboard_variant_selected)
 
     def set_keyboard_variant (self, variant):
+        self.default_keyboard_variant = variant
+        # Make sure the "suggested option" is selected, otherwise this will
+        # change every time the user selects a new keyboard in the manual
+        # choice selection boxes.
+        if self.suggested_keymap.get_active():
+            t = self.default_keyboard_layout + ' - ' + \
+                self.default_keyboard_variant
+            self.suggested_keymap_label.set_property('label', t)
+            self.suggested_keymap.toggled()
         model = self.keyboardvariantview.get_model()
         if model is None:
             return
@@ -1422,6 +1434,8 @@ class Wizard(BaseFrontend):
             iterator = model.iter_next(iterator)
 
     def get_keyboard_variant (self):
+        if self.suggested_keymap.get_active():
+            return unicode(self.default_keyboard_variant)
         selection = self.keyboardvariantview.get_selection()
         (model, iterator) = selection.get_selected()
         if iterator is None:
@@ -1429,6 +1443,12 @@ class Wizard(BaseFrontend):
         else:
             return unicode(model.get_value(iterator, 0))
 
+    def on_suggested_keymap_toggled (self, widget):
+        if self.suggested_keymap.get_active():
+            self.keyboard_layout_hbox.set_sensitive(False)
+        else:
+            self.keyboard_layout_hbox.set_sensitive(True)
+        
     def set_disk_layout(self, layout):
         self.disk_layout = layout
 
